--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
   <main>
 
-    <input id="texto-tarefa" type="text">
+    <input id="texto-tarefa" type="text"> <button id="criar-tarefa">Adicionar</button>
 
     <ol id="lista-tarefas"></ol>
-
-    <button id="criar-tarefa">Adicionar</button>
 
   </main>
 
