--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <ol id="lista-tarefas"></ol>
 
+    <button id="apaga-tudo">Limpar Lista</button>
+
   </main>
 
 <script src="/script.js"></script>
