--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <button id="apaga-tudo">Limpar Lista</button>
 
+    <button id="remover-finalizados">Limpar completos</button>
+
   </main>
 
 <script src="/script.js"></script>
