--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 
     <ol id="lista-tarefas"></ol>
 
+    <button id="remover-selecionado">X</button>
+
     <button id="apaga-tudo">Limpar Lista</button>
 
-    <button id="remover-finalizados">Limpar completos</button>
+    <button id="remover-finalizados">Limpar Completos</button>
+
+    <button id="salvar-tarefas">Salvar Lista</button>
 
   </main>
 
