--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
     <button id="remover-selecionado">X</button>
 
+    <button id="mover-cima">⇧</button>
+
+    <button id="mover-baixo">⇩</button>
+
     <button id="apaga-tudo">Limpar Lista</button>
 
     <button id="remover-finalizados">Limpar Completos</button>
